--- a/styles.scss
+++ b/styles.scss
@@ -8,7 +8,12 @@ body {
     background-color: blue;
     width: 52%;
     height: 100vh;
+    div {
+        background-color: red;
+    }
 }
+
+.leftSection
 
 .rightSection {
     background-color: blueviolet;
